src/objects/pymt__Sales_Tax_By_State__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Table of sales tax percentages by country and state code</description>
    <fields>
        <fullName>pymt__Country_Code__c</fullName>
        <inlineHelpText>Two or three character country ISO code</inlineHelpText>
        <label>Country Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__State_Code__c</fullName>
        <inlineHelpText>Two or three character state ISO code</inlineHelpText>
        <label>State Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Tax_Percent__c</fullName>
        <inlineHelpText>Sales tax percentage</inlineHelpText>
        <label>Tax Percent</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Sales Tax By State</label>
</CustomObject>